// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Panel renders correctly positioned at page bottom 1`] = `
<body>
  <div>
    <div
      class="panel bottom"
    >
      <button
        class="btn btn-icon dismissButton dismissButtonRight"
        data-placement="left"
        data-testid="panel-onDismiss-button"
        data-tooltip="Close panel"
        title="Close panel"
        type="button"
      >
        <svg
          class="mdi-icon icon-inline"
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
          />
        </svg>
      </button>
    </div>
  </div>
</body>
`;

exports[`Panel renders correctly positioned at page side 1`] = `
<body>
  <div>
    <div
      class="panel side"
    >
      <button
        class="btn btn-icon dismissButton dismissButtonLeft"
        data-placement="left"
        data-testid="panel-onDismiss-button"
        data-tooltip="Close panel"
        title="Close panel"
        type="button"
      >
        <svg
          class="mdi-icon icon-inline"
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
          />
        </svg>
      </button>
    </div>
  </div>
</body>
`;
